--- a/painel/painel.component.html
+++ b/painel/painel.component.html
@@ -1,35 +1,38 @@
-<app-navbar></app-navbar>
 <div class="container">
     <div class="jumbotron">
-    <div class="row">
-        <div class="col-sm-6">
-            <app-progresso></app-progresso>
-        </div>
-        <div class="col-sm-6">
-            <app-tentativas></app-tentativas>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <br>
-           <h6>Traduza a Frase</h6> 
-           <p>How are you?</p>
-           <div class="form-group">
-                <label for="exampleFormControlTextarea1"></label>
-                    <textarea class="form-control" rows="3"></textarea>
-          </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
+        <div class="row">
+            <div class="col-sm-6">
+                <app-progresso [progresso]="progresso"></app-progresso>
+            </div>
+            <div class="col-sm-6">
                 <div class="d-flex justify-content-end">
-                        <button type="button" class="btn btn-primary"> Verificar</button>
+                    <app-tentativas></app-tentativas>
                 </div>
-           
+            </div>
         </div>
 
-    </div>
+        <div class="row">
+            <div class="col">
+                <h6>{{ instrucao }}</h6>
+                <p>{{ rodadaFrase.fraseEng }}</p>
+                <div class="form-group">
+                    <textarea 
+                        class="form-control" 
+                        rows="3"
+                        (input)="atualizaResposta($event)"
+                        [value]="resposta"
+                    ></textarea>
+                </div>
+            </div>
+        </div>
 
-
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-primary" (click)="verificarResposta()">Verificar</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+    
