--- a/tentativas/tentativas.component.html
+++ b/tentativas/tentativas.component.html
@@ -1,8 +1,3 @@
-<div class="d-flex justify-content-end">
-        <img src="/assets/coracao_vazio.png"/>
-        <img src="/assets/coracao_vazio.png"/>
-        <img src="/assets/coracao_vazio.png"/>
-
-
-</div>
-
+<img [src]="coracaoVazio" />
+<img [src]="coracaoVazio" />
+<img [src]="coracaoVazio" />
