--- a/topo/topo.component.html
+++ b/topo/topo.component.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1">Aprendendo Inglês</span>
+<nav class="navbar navbar-inverse bg-faded">
+  <h1 class="navbar-brand mb-0">{{ titulo }}</h1>
 </nav>
